--- a/Software Challenge/TSP_introductory_challenge.ipynb
+++ b/Software Challenge/TSP_introductory_challenge.ipynb
@@ -63,15 +63,7 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: networkx in /opt/conda/lib/python3.10/site-packages (3.1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# installing necessary modules\n",
     "! pip install networkx\n",
@@ -81,6 +73,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -728,13 +721,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
-    "''' Fill the missing edge w/ Inf weight'''\n",
+    "# ''' Fill the missing edge w/ high weight'''\n",
     "# HIGH_WEIGHT = float('inf')\n",
-    "HIGH_WEIGHT = 100\n",
+    "HIGH_WEIGHT = 1000\n",
     "N = G.number_of_nodes()\n",
     "for i in range(N):\n",
     "    for j in range(N):\n",
@@ -750,7 +743,7 @@
     "tags": []
    },
    "source": [
-    "### Solution 2 - Part 1: reducing to a 3 nodes problem"
+    "## Solution - Part 1: reducing to a 3 nodes problem"
    ]
   },
   {
@@ -873,7 +866,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Solution 2 - Part 2: Taking advantage of the redundancy in the conditions"
+    "## Solution - Part 2: Taking advantage of the redundancy in the conditions"
    ]
   },
   {
@@ -918,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 116,
    "metadata": {
     "tags": []
    },
@@ -958,7 +951,7 @@
     "    sham_bin = sum(((1 - sum((1-Z(k+(n-1)*t))/2 for k in range(n-1)))-1/2)**2 for t in range(n))\n",
     "    # print(sham_bin)\n",
     "        \n",
-    "    sham = sham_main + A * (2*sham_nodes + sham_ini + sham_fin + sham_bin)\n",
+    "    sham = sham_main + A * (sham_nodes + sham_ini + sham_fin + sham_bin)\n",
     "    # print(f'sham_main: {hamiltonians.SymbolicHamiltonian(sham_main).matrix}')\n",
     "#     print(f'sham_ini: {hamiltonians.SymbolicHamiltonian(sham_ini).matrix.shape}')\n",
     "#     print(f'sham_fin: {hamiltonians.SymbolicHamiltonian(sham_fin).matrix.shape}')\n",
@@ -973,14 +966,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Qibo 0.1.13|WARNING|2023-05-07 10:57:22]: Calculating the dense form of a symbolic Hamiltonian. This operation is memory inefficient.\n"
+      "[Qibo 0.1.13|WARNING|2023-05-07 11:21:05]: Calculating the dense form of a symbolic Hamiltonian. This operation is memory inefficient.\n"
      ]
     },
     {
@@ -1001,7 +994,7 @@
        "        2706.9+0.j]])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1012,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -1028,7 +1021,7 @@
        "        0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j]])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1038,19 +1031,16 @@
        "(array([0]), array([33]))"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
-     "data": {
-      "text/plain": [
-       "'0b100000'"
-      ]
-     },
-     "execution_count": 75,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([33]),)\n"
+     ]
     }
    ],
    "source": [
@@ -1064,12 +1054,13 @@
     "\n",
     "np.where(v[ground_index] == 1+0j)\n",
     "\n",
-    "bin(33-1)"
+    "print(ground_index)\n",
+    "#bin(ground_index)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1143,12 +1134,13 @@
     "                bool_lastnode = False\n",
     "        if bool_lastnode :\n",
     "            print(\"Step \"+str(t+1)+\": camp \"+str(n-1))\n",
-    "    print(\"Step \"+str(n)+\": camp \"+str(n))"
+    "    print(\"Step \"+str(n)+\": camp \"+str(n))\n",
+    "    # np.array([int(i) for i in list(state)], dtype=int).reshape((5, 5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1148,7 @@
      "output_type": "stream",
      "text": [
       "Number of qubits needed to solve the problem:  6\n",
-      "best energy:  606.4429124018735\n"
+      "best energy:  559.0542633340893\n"
      ]
     }
    ],
@@ -1195,28 +1187,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MeasurementResult(qubits=(0, 1, 2, 3, 4, 5), nshots=0)"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "000000\n",
+      "100010\n",
       "Step 0: camp 0\n",
-      "Step 1: camp 2\n",
+      "Step 1: camp 1\n",
       "Step 2: camp 2\n",
-      "Step 3: camp 2\n",
+      "Step 3: camp 1\n",
       "Step 3: camp 3\n"
      ]
     }
@@ -1229,7 +1211,7 @@
     "# measure the output of the circuit and obtain results\n",
     "nshots= 4000\n",
     "circuit = Circuit(nqubits)\n",
-    "circuit.add(gates.M(*range(nqubits)))\n",
+    "_ = circuit.add(gates.M(*range(nqubits)))\n",
     "result = CircuitResult(qaoa.backend, circuit, quantum_state, nshots=nshots)\n",
     "freq_counter = result.frequencies()\n",
     "\n",
@@ -1270,7 +1252,9 @@
     "# conversion of the right solution in the ket representation\n",
     "ket_0 = np.array([1. +0j, 0+0j])\n",
     "ket_1 = np.array([0 +0j, 1+0j])\n",
-    "right_solution = np.array([0 0 0 0 0 0 0 1 0 0 1 0 0 1 0 0 1 0 0 0])\n",
+    "# right_solution = np.array([0 0 0 0 0 0 0 1 0 0 1 0 0 1 0 0 1 0 0 0])\n",
+    "right_solution = np.array([100100])\n",
+    "\n",
     "if right_solution[0] == '1':\n",
     "    right_solution_state = ket_0\n",
     "else:\n",
@@ -1284,7 +1268,7 @@
     "        right_solution_state = np.kron(solution_state,ket_1)\n",
     "\n",
     "print('State of our the QAOA solution :',solution_state)\n",
-    "print('State of the right classical solution :', right_solution_state)\n"
+    "print('State of the right classical solution :', right_solution_state)"
    ]
   },
   {
@@ -1299,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -1308,7 +1292,7 @@
        "[0, 4, 3, 2, 1]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 115,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1328,107 +1312,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Solution 2 - Part 3 : Divide and conquer NISQ computers"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Solution2 - Part 3 : Divide and conquer, a hybrid approach\n",
+    "\n",
     "Our previous protocol provides a fully quantum implementation of the TSP problem on a N-node graph, with starting and ending points, using $(N-2)(N-3)$ qubits. This is nice, but we know that in the NISQ area we can't rely on arbitrarily big quantum computers: the number of avalaible qubits is in reality resticted to some upper value. Considering an arbitrarily big $N$-node graph, we would thus like to find a way to divide our problem into smaller problems that could be solved by our NISQ computer. To do so, we will carry out a divide-and-conquer hybrid approach.\n",
     "\n",
     "Considering a N-node graph $G$ with starting and ending points $0$ and $N-1$, we scan every node $i$ that is connected to $0$ and look for the best solution of the TSP on the subgraph $G'=G/\\{0\\}$ starting from node $i$ and ending at $N-1$. Every of these subproblems requires $(N'-2)(N'-3)$ qubits, with $N'=N-1$. Supposing that we have solved this subproblems and obtains the respective optimal costs $C_i$ and optimal paths $S_i = [i,..., N-1]$, we deduce the global optimal cost as being $\\max\\{C_i + w_{0,i} \\text{ for } i \\in\\{1,...,N-2\\}\\}$, reached for $i=i_0$. The optimal path is finally $[0]+S_{i_0}$."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "## Temporarely Abandoned Solution: Optimize knowing the start and end positions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from qibo import models, hamiltonians\n",
-    "from qibo.symbols import Z, X, Y\n",
-    "from qibo import hamiltonians\n",
-    "\n",
-    "A = 100  # coefficient of the constraints (needs to be way bigger than edge weights, but not too big either)\n",
-    "HIGH_COEFF = 1000"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Main Hamiltonian:\n",
-    "\n",
-    "$$C_0(x) = \\sum_{i,j=0}^{n-1}w_{i,j}\\sum_{t=0}^{n-1}x_{i,t}x_{j,t+1}$$\n",
-    "\n",
-    "Standard constrains hamiltonians:\n",
-    "\n",
-    "Each city should be visited exactly once, which corresponds to the Hamiltonian term:\n",
-    "\n",
-    "$$ H_{c_1} = \\sum_{i}^{N}{(1-\\sum_{t}{x_{i, t}})^2} $$\n",
-    "\n",
-    "where N is the number of cities to visit and $x_{i, t} \\in \\{0, 1\\}$ is a binary variable indicating that we visit city $i$ along some path $x$ at time step $t$.\n",
-    "\n",
-    "Each timestep should only contain one city (i.e. we can’t be in multiple cities at once), corresponding to the term:\n",
-    "\n",
-    "$$ H_{c_2} = \\sum_{t}{(1-\\sum_{i}{x_{i, t}})^2} $$\n",
-    "\n",
-    "where now we sum over timesteps $t$ at the end."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def build_TSP_hamiltonian(G : nx.Graph) ->  hamiltonians.SymbolicHamiltonian:\n",
-    "    N = G.number_of_nodes()\n",
-    "    \n",
-    "    # Main hamiltonian\n",
-    "    H = sum((G[i][j][\"weight\"]/4 * sum(((1-Z(i + N*t)) * (1-Z(j + N*(t+1)))) for t in range(N-1))) for i, j in G.edges())\n",
-    "    \n",
-    "    # City visited only once:\n",
-    "    H += A*sum(((1 - 1/2 * sum((1-Z(i + N*t)) for t in range(N)))**2) for i in G.nodes())\n",
-    "    # One city visited at the time\n",
-    "    H += A*sum(((1 - 1/2 * sum((1-Z(i + N*t)) for i in G.nodes()))**2) for t in range(N))\n",
-    "    # Last link used to get to the final destination\n",
-    "    custom_W = []\n",
-    "    for i in range(1, N-1):\n",
-    "        try:\n",
-    "            custom_W.append(G[i][-1][\"weight\"]/2*(1-Z(i + N*3)))\n",
-    "        except:\n",
-    "            custom_W.append(HIGH_COEFF/2*(1-Z(i + N*3)))\n",
-    "    \n",
-    "    custom_W = sum(custom_W)\n",
-    "    H +=  custom_W\n",
-    "    return hamiltonians.SymbolicHamiltonian(H)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We define a standard mixer (driver) hamiltonian:\n",
-    "\n",
-    "$$X = \n",
-    "\\begin{pmatrix}\n",
-    "0 & 1 \\\\\n",
-    "1 & 0\n",
-    "\\end{pmatrix}$$\n",
-    "\n",
-    "$$H_{M} = \\sum_{t}{\\sum_{i}^{N}{X}}$$"
    ]
   },
   {
@@ -1436,81 +1324,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def build_mixer_hamiltonian(G: nx.Graph) ->  hamiltonians.SymbolicHamiltonian:\n",
-    "    N = G.number_of_nodes()\n",
-    "    H = sum((sum((X(i + N*t)) for i in range(G.number_of_nodes() ))) for t in range(G.number_of_nodes()))\n",
-    "    return hamiltonians.SymbolicHamiltonian(H)\n",
-    "\n",
-    "def build_initial_hamiltonian(G: nx.Graph) ->  hamiltonians.SymbolicHamiltonian:\n",
-    "    N = G.number_of_nodes()\n",
-    "    n = N-2\n",
-    "    H = sum((sum((X(i + n*t)) for i in range(n))) for t in range(n))\n",
-    "    return hamiltonians.SymbolicHamiltonian(H)\n",
-    "\n",
-    "\n",
-    "def prepare_initial_state(G: nx.Graph):\n",
-    "    nbqubits = G.number_of_nodes()**2\n",
-    "    initial_state = np.ones(2**nbqubits) / 2**(nqubits//2)    # state ket(+) x ket(+) x ... x ket(+)\n",
-    "    \n",
-    "    return initial_state\n",
-    "\n",
-    "def display_solution(state: str):\n",
-    "    n = int(np.sqrt(len(state)))\n",
-    "    for t in range(n) :\n",
-    "        for i in range(n) :\n",
-    "            if state[i + n*t] == '1' : \n",
-    "                print(\"Step \"+str(t)+\": camp \"+str(i))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "number of qubits needed to solve the problem:  9\n",
-      "best energy:  849.0607597795788\n"
-     ]
-    }
-   ],
-   "source": [
-    "N = G.number_of_nodes()\n",
-    "for i in range(N-2):\n",
-    "    nqubits = (G.number_of_nodes()-3)*(G.number_of_nodes()-2)\n",
-    "    print(\"number of qubits needed to solve the problem: \", nqubits)\n",
-    "\n",
-    "    # create the cost Hamiltonian for the given graph\n",
-    "    hamiltonian = build_TSP_hamiltonian(G)\n",
-    "    # print(f'Hamiltonian: \\n {hamiltonian}')\n",
-    "\n",
-    "    # create the mixer Hamiltonian for the given graph\n",
-    "    mixer_hamiltonian = build_mixer_hamiltonian(G)\n",
-    "    # print(f'Mixer Hamiltonian: \\n {mixer_hamiltonian}')\n",
-    "\n",
-    "    # create QAOA model given the Hamiltonians\n",
-    "    qaoa = models.QAOA(hamiltonian=hamiltonian, mixer=mixer_hamiltonian)\n",
-    "\n",
-    "    # optimize using random initial variational parameters with eight layers \n",
-    "    # Note: you can change the number of layers but it has to be an even number\n",
-    "    num_layers = 8\n",
-    "    initial_parameters = np.random.random(num_layers) \n",
-    "\n",
-    "    # prepare the initial state of the QAOA optimization \n",
-    "    initial_state = prepare_initial_state(G) \n",
-    "    # print(f'Initial State: \\n {initial_state}')\n",
-    "\n",
-    "    # run the QAOA optimization with the initial parameters and the hamiltonians defined\n",
-    "    best_energy, final_parameters, extra = qaoa.minimize(\n",
-    "        initial_parameters, \n",
-    "        method=\"BFGS\", \n",
-    "        initial_state=initial_state)\n",
-    "\n",
-    "    print(\"best energy: \", best_energy)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
